Replace deprecated Wrapper constructors with valueOf
new Integer, new Long are deprecated and the valueOf method should be
used

Change-Id: I1f963399e3f729ea012d0d9bc2ed8ae5d0fce302
Signed-off-by: Lars Vogel <Lars.Vogel@vogella.com>