@@ -200,7 +200,7 @@ public class VerbosePacketStream extends PrintStream {
 		printHex(flags);
 		if ((flags & JdwpPacket.FLAG_REPLY_PACKET) != 0) {
 			print(MessageFormat
-					.format(" (REPLY to {0})", new Object[] { JdwpCommandPacket.commandMap().get(new Integer(TcpipSpy.getCommand(packet))) })); //$NON-NLS-1$
+					.format(" (REPLY to {0})", new Object[] { JdwpCommandPacket.commandMap().get(Integer.valueOf(TcpipSpy.getCommand(packet))) })); //$NON-NLS-1$
 		} else {
 			print(" (COMMAND)"); //$NON-NLS-1$
 		}
@@ -229,7 +229,7 @@ public class VerbosePacketStream extends PrintStream {
 		printHex(command);
 		printParanthetical(command);
 		print(" ("); //$NON-NLS-1$
-		print(JdwpCommandPacket.commandMap().get(new Integer(commandAndSet)));
+		print(JdwpCommandPacket.commandMap().get(Integer.valueOf(commandAndSet)));
 		println(')');
 	}
 
@@ -240,7 +240,7 @@ public class VerbosePacketStream extends PrintStream {
 		printHex(error);
 		if (error != 0) {
 			print(" ("); //$NON-NLS-1$
-			print(JdwpReplyPacket.errorMap().get(new Integer(error)));
+			print(JdwpReplyPacket.errorMap().get(Integer.valueOf(error)));
 			print(')');
 		}
 		println();
