@@ -1582,11 +1582,11 @@ public final class JavaRuntime {
 		if (projects == null) {
 			projects = new ArrayList<>();
 			fgProjects.set(projects);
-			count = new Integer(0);
+			count = Integer.valueOf(0);
 		}
 		int intCount = count.intValue();
 		intCount++;
-		fgEntryCount.set(new Integer(intCount));
+		fgEntryCount.set(Integer.valueOf(intCount));
 		try {
 			for (int i = 0; i < cpes.length; i++) {
 				IClasspathEntry cpe = cpes[i];
@@ -1617,7 +1617,7 @@ public final class JavaRuntime {
 				fgProjects.set(null);
 				fgEntryCount.set(null);
 			} else {
-				fgEntryCount.set(new Integer(intCount));
+				fgEntryCount.set(Integer.valueOf(intCount));
 			}
 		}
 		// set classpath property
